[project]
name = "zargonbackup"
version = "1.0"
description = "Backup script"
authors = [
    {name = "Arapov Nikita",email = "nicarpov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
zargonbackup = "zargonbackup:cli"
